objects/INFRA__Part_Forecast_Detail__c.object
<CustomObject>
    <description>Object to store the details of Part Forecast, that needs to be published to JDA bridge</description>
    <fields>
        <fullName>INFRA__ATTRIB_NM_10__c</fullName>
        <inlineHelpText>Framework object record id</inlineHelpText>
        <label>ATTRIB_NM_10</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__ATTRIB_NM_1__c</fullName>
        <description>Field that will be directly mapped to JDA Bridge field - ATTRIB_NM_1</description>
        <inlineHelpText>Placeholder for &quot;ATTRIB_NM_1&quot; field of bridge.</inlineHelpText>
        <label>ATTRIB_NM_1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__ATTRIB_NM_2__c</fullName>
        <description>Field that will be directly mapped to JDA Bridge field - ATTRIB_NM_2</description>
        <inlineHelpText>Placeholder for &quot;ATTRIB_NM_2&quot; field of bridge.</inlineHelpText>
        <label>ATTRIB_NM_2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Amount__c</fullName>
        <description>Forecast Amount</description>
        <inlineHelpText>Forecast Amount in USD</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INFRA__Forecast_Detail_Key__c</fullName>
        <description>Unique External Id Field. This key will be generated by the Framework</description>
        <externalId>true</externalId>
        <label>Forecast Detail Key</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>INFRA__Part_Forecast__c</fullName>
        <description>Part Forecast Id - Foreign Key</description>
        <label>Part Forecast</label>
        <referenceTo>INFRA__Part_Forecast__c</referenceTo>
        <relationshipLabel>Part Forecast Detail</relationshipLabel>
        <relationshipName>Part_Forecast_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>INFRA__Period_Indicator__c</fullName>
        <description>Field which indicate Forecast Period - Yearly, Quaterly or Monthly. If the value is not set default config value will be used</description>
        <inlineHelpText>The allowed values are : 400 - Yearly, 401 - Monthly, 402 - Quarterly</inlineHelpText>
        <label>Period Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Period__c</fullName>
        <description>Forecast Period</description>
        <inlineHelpText>If monthly forecast, period values should be in the YYYYMM format, example - 201302, 201303
If quarterly forecast, period values should be in the YYYYQ# format, example - 2013Q1, 2013Q2</inlineHelpText>
        <label>Period</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INFRA__Quantity__c</fullName>
        <description>Forecast Quantity</description>
        <inlineHelpText>Quantity value</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INFRA__Re_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A flag field to indicate that the record was republished. After re-publish if there are detail that were not re-published they will be deleted by the framework</description>
        <inlineHelpText>Flag to indicate if data is ready to be published to bridge</inlineHelpText>
        <label>Re-Published?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INFRA__UOM__c</fullName>
        <description>Quantity &amp; Unit of Measurement (UOM).
JDA already uses the default UOM, but if it is anything outside of that then this field can be used to publish it to JDA.</description>
        <inlineHelpText>Quantity &amp; Unit of Measurement (UOM).</inlineHelpText>
        <label>UOM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Part Forecast Detail</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Forecast Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Forecast Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>